--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="resources/fav.ico">
+
+        <meta charset="UTF-8">
+        <meta name="description" content="I don't know how to describe this">   
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>WebFetch v1.0</title>
     </head>
 
     <body>
